[gd_scene load_steps=6 format=3 uid="uid://bb6f1j5gnkspm"]

[ext_resource type="Script" path="res://Menus/main.gd" id="1_qa5lg"]
[ext_resource type="PackedScene" uid="uid://dggws16tbd7nd" path="res://BG v2/background_v2.tscn" id="2_lri23"]
[ext_resource type="AudioStream" uid="uid://nml2mhmfgivl" path="res://Music/interface-124464.mp3" id="3_qlbbu"]
[ext_resource type="PackedScene" uid="uid://dcvinywcoqati" path="res://Global/b_gsound.tscn" id="4_yy4wt"]
[ext_resource type="AudioStream" uid="uid://bwv4yamg5pt3o" path="res://Music/santa-claus-merry-christmas-ho-ho-ho-103426.mp3" id="5_wq4o0"]

[node name="Main" type="Node2D"]
script = ExtResource("1_qa5lg")

[node name="ParallaxBackground" parent="." instance=ExtResource("2_lri23")]

[node name="Buttons" type="Node" parent="."]

[node name="Spielen" type="Button" parent="Buttons"]
anchors_preset = -1
anchor_left = 0.332
anchor_top = 0.233
anchor_right = 0.68
anchor_bottom = 0.326
offset_left = 0.53598
offset_top = 0.0159912
offset_right = -0.359985
offset_bottom = 59.752
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
text = "SPIELEN"

[node name="Clicksound" type="AudioStreamPlayer" parent="Buttons/Spielen"]
stream = ExtResource("3_qlbbu")

[node name="Verlassen" type="Button" parent="Buttons"]
anchors_preset = -1
anchor_left = 0.332
anchor_top = 0.454
anchor_right = 0.68
anchor_bottom = 0.546
offset_left = 0.53598
offset_top = -0.192017
offset_right = -0.359985
offset_bottom = 60.192
size_flags_vertical = 4
tooltip_text = "Quit"
text = "VERLASSEN"

[node name="Clicksound" type="AudioStreamPlayer" parent="Buttons/Verlassen"]
stream = ExtResource("3_qlbbu")

[node name="BGsound" parent="." instance=ExtResource("4_yy4wt")]

[node name="Merry Christmas" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_wq4o0")
autoplay = true

[connection signal="mouse_entered" from="Buttons/Spielen" to="." method="_on_spielen_mouse_entered"]
[connection signal="pressed" from="Buttons/Spielen" to="." method="_on_spielen_pressed"]
[connection signal="mouse_entered" from="Buttons/Verlassen" to="." method="_on_verlassen_mouse_entered"]
[connection signal="pressed" from="Buttons/Verlassen" to="." method="_on_verlassen_pressed"]
